--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -148,9 +148,9 @@ endif ( WIN32 )
 
 
 ### Copy the README file in build directory ### 
-file ( COPY README DESTINATION ${CMAKE_BINARY_DIR}/test )
+#file ( COPY README DESTINATION ${CMAKE_BINARY_DIR}/test )
 
 if ( CODE_COVERAGE )
 	### Copy the cca.sh file in build directory ###
-	file ( COPY cca.sh DESTINATION ${CMAKE_BINARY_DIR}/test ) 
+	#file ( COPY cca.sh DESTINATION ${CMAKE_BINARY_DIR}/test ) 
 endif ( CODE_COVERAGE )
