InverseSolver cleaned from many unused routines; LAPACK test added.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -82,6 +82,7 @@ set ( SOURCE_FILES
         L1NormTest
         L2NormTest
         LAMAArrayTest
+        LAPACKTest
         MatrixStorageConversionTest
         MatrixTest
         MaxNormTest
