Cleaned LAMAInterface and now static registration for each interface block

--- a/src/test/cuda/CMakeLists.txt
+++ b/src/test/cuda/CMakeLists.txt
@@ -44,6 +44,7 @@ set ( SOURCE_FILES
         CUDA_LAMAArrayTest
         CUDA_MatrixStorageTest
         CUDA_VectorTest
+        CUDA_InterfaceRegistryTest
     )
 
 lama_classes ( ${CLASSES} )
