--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -82,9 +82,9 @@ lama_classes ( ${CLASSES} )
 lama_headers ( ${HEADERS} )
 
 ### add subdirectories ###
-if ( CUDA_FOUND )
+if ( CUDA_FOUND AND LAMA_USE_CUDA )
     add_subdirectory ( cuda )
-endif ( CUDA_FOUND )
+endif ( CUDA_FOUND AND LAMA_USE_CUDA )
 add_subdirectory ( distribution )
 add_subdirectory ( exception )
 add_subdirectory ( expression )
@@ -92,9 +92,9 @@ add_subdirectory ( io )
 add_subdirectory ( macros )
 add_subdirectory ( matrix )
 add_subdirectory ( matutils )
-if ( MPI_FOUND )
+if ( MPI_FOUND AND LAMA_USE_MPI )
     add_subdirectory ( mpi )
-endif ( MPI_FOUND )
+endif ( MPI_FOUND AND LAMA_USE_MPI )
 add_subdirectory ( norm )
 add_subdirectory ( openmp )
 add_subdirectory ( solver )
@@ -115,22 +115,22 @@ add_library ( lama SHARED ${CXX_SOURCES} ${HEADERS} )
 ### set target link libraries ###
 set( LAMA_LINK_LIBRARIES log4lama )
 
-if ( CUDA_FOUND )
+if ( CUDA_FOUND AND LAMA_USE_CUDA )
     #target_link_libraries( lama lamacuda )
     set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} lamacuda )
-endif ( CUDA_FOUND )
+endif ( CUDA_FOUND AND LAMA_USE_CUDA )
 
-if ( MPI_FOUND )
+if ( MPI_FOUND AND LAMA_USE_MPI )
     set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} lamampi )
     #target_link_libraries ( lama lamampi )
-endif ( MPI_FOUND )
+endif ( MPI_FOUND AND LAMA_USE_MPI )
 
-if ( SCALAPACK_FOUND AND MPI_FOUND )
+if ( SCALAPACK_FOUND AND MPI_FOUND AND LAMA_USE_MPI )
     set ( LAMAPP_LINK_LIBRARIES ${LAMAPP_LINK_LIBRARIES} ${LAMA_PBLAS_LIBRARIES} )
     add_definitions( -DLAMA_MKL_SCALAPACK )
-else ( SCALAPACK_FOUND AND MPI_FOUND )
+else ( SCALAPACK_FOUND AND MPI_FOUND AND LAMA_USE_MPI )
     set ( LAMAPP_LINK_LIBRARIES ${LAMAPP_LINK_LIBRARIES} ${LAMA_BLAS_LIBRARIES} )
-endif ( SCALAPACK_FOUND AND MPI_FOUND )
+endif ( SCALAPACK_FOUND AND MPI_FOUND AND LAMA_USE_MPI )
 
 if ( NOT WIN32 )
     set ( LAMAPP_LINK_LIBRARIES ${LAMAPP_LINK_LIBRARIES} ${Boost_THREAD_LIBRARY} )
