--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -126,7 +126,7 @@ if ( MPI_FOUND AND LAMA_USE_MPI )
 endif ( MPI_FOUND AND LAMA_USE_MPI )
 
 if ( SCALAPACK_FOUND AND MPI_FOUND AND LAMA_USE_MPI )
-    set ( LAMAPP_LINK_LIBRARIES ${LAMAPP_LINK_LIBRARIES} ${LAMA_PBLAS_LIBRARIES} )
+    set ( LAMAPP_LINK_LIBRARIES ${LAMAPP_LINK_LIBRARIES} ${LAMA_PBLAS_LIBRARIES} ${LAMA_BLAS_LIBRARIES})
     add_definitions( -DLAMA_MKL_SCALAPACK )
 else ( SCALAPACK_FOUND AND MPI_FOUND AND LAMA_USE_MPI )
     set ( LAMAPP_LINK_LIBRARIES ${LAMAPP_LINK_LIBRARIES} ${LAMA_BLAS_LIBRARIES} )
@@ -136,12 +136,15 @@ if ( NOT WIN32 )
     set ( LAMAPP_LINK_LIBRARIES ${LAMAPP_LINK_LIBRARIES} ${Boost_THREAD_LIBRARY} )
 endif ( NOT WIN32 )
 
+message ( STATUS "LAMA_BLAS_FOUND ${LAMA_BLAS_FOUND} as ${LAMA_BLAS_LIBRARIES}" )
+
 if ( LAMA_BLAS_FOUND )
 #TODO: SUMMARY
     #message ( STATUS "LAMA_BLAS_LIBRARIES ${LAMAPP_LINK_LIBRARIES}" )
     set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${LAMAPP_LINK_LIBRARIES} )
 endif( LAMA_BLAS_FOUND )
-           
+
+message ( STATUS "LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES}" )     
 
 target_link_libraries ( lama ${LAMA_LINK_LIBRARIES} )
 
@@ -154,7 +157,11 @@ endif ( WIN32 )
 if ( MKL_FOUND )
     # default: LAMA_FORTRAN_BLAS_STYLE_LOWERCASE
 elseif ( ACML_FOUND )
-    add_definitions ( -DLAMA_FORTRAN_BLAS_STYLE_UPCASE )
+    if ( WIN32 )
+        add_definitions ( -DLAMA_FORTRAN_BLAS_STYLE_UPCASE ) # not tested yet
+    else( WIN32 )
+        add_definitions ( -DLAMA_FORTRAN_BLAS_STYLE_UNDERSCORE )
+    endif ( WIN32 )
 else ()
     add_definitions ( -DLAMA_FORTRAN_BLAS_STYLE_UNDERSCORE )
 endif ()
