Some cleaning on CMake example

--- a/CMake/Tests/CXX/CMakeLists.txt
+++ b/CMake/Tests/CXX/CMakeLists.txt
@@ -1,3 +1,7 @@
+################################################
+#   CMake example for simple C++ program       #
+################################################
+
 cmake_minimum_required( VERSION 2.8 )
 
 ## PROJECT NAME and supported LANGUAGES
