Corrected examples for CMake

--- a/CMake/Tests/Boost/CMakeLists.txt
+++ b/CMake/Tests/Boost/CMakeLists.txt
@@ -4,8 +4,6 @@ project( BoostExample )
 
 # make sure that the default is a RELEASE
 
-set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../Modules" )
-
 if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE RELEASE CACHE STRING
       "Choose the type of build, options are: None Debug Release."
@@ -17,26 +15,26 @@ set ( Boost_COMPONENTS thread )
 set ( Boost_DEBUG TRUE )
 set ( Boost_DETAILED_FAILURE_MSG TRUE )
 
-find_package ( Boost COMPONENTS ${Boost_COMPONENTS} )
-# find_package ( Boost COMPONENTS ${Boost_COMPONENTS} QUIET ) 
-
-if ( NOT Boost_THREAD_LIBRARY )
-    message ( FATAL_ERROR "Boost thread library not found" )
-endif ( NOT Boost_THREAD_LIBRARY )
-
 # Alternative on WIN32
 # set ( Boost_USE_STATIC_LIBS ON )
 # set ( Boost_USE_MULTITHREADED ON )
 # set ( Boost_USE_STATIC_RUNTIME OFF )
 
+# Note: set (environment) variable BOOST_ROOT to find installed Boost
+
+find_package ( Boost COMPONENTS ${Boost_COMPONENTS} )
+
+if ( NOT Boost_THREAD_LIBRARY )
+    message ( FATAL_ERROR "Boost thread library not found" )
+endif ( NOT Boost_THREAD_LIBRARY )
+
 if ( Boost_FOUND )
-    message( STATUS "Boost found, BLAS_LIBRARIES=${BLAS_LIBRARIES}" )
+    message( STATUS "Boost found, Boost_THREAD_LIBRARY=${Boost_THREAD_LIBRARY}" )
     add_executable( example example.cpp )
     target_link_libraries( example ${Boost_THREAD_LIBRARY} )
 
 # Alternative on WIN32
-#   set ( LAMAPP_LINK_DIRECTORIES ${LAMAPP_LINK_DIRECTORIES} ${Boost_LIBRARY_DIRS} )
-#   link_directories( ${LAMAPP_LINK_DIRECTORIES} )
+#   link_directories( ${Boost_LIBRARY_DIRS} )
 
 else( Boost_FOUND )
     message( STATUS "Boost not found" )
