CMake library example now works also for Visual C++ compilers.

--- a/CMake/Tests/Lib/CMakeLists.txt
+++ b/CMake/Tests/Lib/CMakeLists.txt
@@ -12,10 +12,27 @@ project ( LibTest CXX )
 #   Simple C++ program                         #
 ################################################
 
-set ( LIBRARY_MODE SHARED )
-# set ( LIBRARY_MODE STATIC )
+# default is building shared libraries, might be changed
+
+set (BUILD_SHARED_LIBS ON CACHE BOOL
+
+    "Build shared libraries instead of static ones.")
+
+if ( BUILD_SHARED_LIBS )
+
+    set ( LIBRARY_MODE SHARED )
+
+    add_definitions( -DDLL_LINKING )
+
+else ()
+
+    set ( LIBRARY_MODE STATIC )
+
+endif ()
 
 add_library( rectangle ${LIBRARY_MODE} Rectangle.cpp Rectangle.hpp )
+
 add_executable( example example.cpp )
+
 target_link_libraries( example rectangle )
 
