--- a/src/lama/solver/CMakeLists.txt
+++ b/src/lama/solver/CMakeLists.txt
@@ -37,11 +37,9 @@ add_subdirectory ( logger )
 ### for external amg ###
 file ( GLOB AMG_SUBDIRPRESENT "amg" )
 
-if ( AMG_SUBDIRPRESENT AND MPI_FOUND AND LAMA_USE_MPI 
-                       AND CUDA_FOUND AND LAMA_USE_CUDA )
-
+if ( AMG_SUBDIRPRESENT AND MPI_FOUND AND LAMA_USE_MPI AND CUDA_FOUND AND LAMA_USE_CUDA )
     add_subdirectory ( ${AMG_SUBDIRPRESENT} )
-endif ( AMG_SUBDIRPRESENT AND MPI_FOUND AND LAMA_USE_MPI )
+endif ( AMG_SUBDIRPRESENT AND MPI_FOUND AND LAMA_USE_MPI AND CUDA_FOUND AND LAMA_USE_CUDA)
 
 ### Add classes and header files ###
 set ( CLASSES
