--- a/src/lama/solver/CMakeLists.txt
+++ b/src/lama/solver/CMakeLists.txt
@@ -41,7 +41,8 @@ if ( AMG_SUBDIRPRESENT AND MPI_FOUND AND LAMA_USE_MPI
                        AND CUDA_FOUND AND LAMA_USE_CUDA )
 
     add_subdirectory ( ${AMG_SUBDIRPRESENT} )
-endif ( AMG_SUBDIRPRESENT AND MPI_FOUND AND LAMA_USE_MPI )
+
+endif ( )
 
 ### Add classes and header files ###
 set ( CLASSES
