fixed cmake list for tutorial and lecture

--- a/doc/user_guide/cpp_source/CMakeLists.txt
+++ b/doc/user_guide/cpp_source/CMakeLists.txt
@@ -35,28 +35,36 @@ cmake_minimum_required( VERSION 2.8 )
 
 project ( LAMA_USER_DOC CXX )
 
-if ( NOT LAMA_ROOT AND NOT $ENV{LAMA_ROOT} STREQUAL "" )
+if ( NOT LAMA_ROOT AND "$ENV{LAMA_ROOT}" STREQUAL "" )
     message ( FATAL_ERROR "Please define LAMA_ROOT.")
-elseif ( NOT EXISTS ${LAMA_ROOT} )
-    message ( FATAL_ERROR "The defined LAMA_ROOT (${LAMA_ROOT}) is not a directory." )
+endif ( NOT LAMA_ROOT AND "$ENV{LAMA_ROOT}" STREQUAL "" ) 
+
+if ( LAMA_ROOT )
+    if ( NOT IS_DIRECTORY ${LAMA_ROOT} )
+        message ( FATAL_ERROR "1 The defined LAMA_ROOT (${LAMA_ROOT}) is not a directory." )
+    endif( NOT IS_DIRECTORY ${LAMA_ROOT} )
+else ( LAMA_ROOT )
+    if ( "$ENV{LAMA_ROOT}" STREQUAL "" AND NOT IS_DIRECTORY $ENV{LAMA_ROOT} )
+        message ( FATAL_ERROR "2 The defined LAMA_ROOT ($ENV{LAMA_ROOT}) is not a directory." )
+    else ( "$ENV{LAMA_ROOT}" STREQUAL "" AND NOT IS_DIRECTORY $ENV{LAMA_ROOT} )
+        set ( LAMA_ROOT $ENV{LAMA_ROOT} )
+    endif ( "$ENV{LAMA_ROOT}" STREQUAL "" AND NOT IS_DIRECTORY $ENV{LAMA_ROOT} )
+endif ( LAMA_ROOT )
+
+if ( IS_DIRECTORY ${LAMA_ROOT}include )
+    include_directories( ${LAMA_ROOT}include )
+elseif ( IS_DIRECTORY ${LAMA_ROOT}src/lama )
+    include_directories( ${LAMA_ROOT}src )
+else ()
+    message ( FATAL_ERROR "Found no include subdirectories (include or src) in ${LAMA_ROOT}include or ${LAMA_ROOT}src/lama" )
 endif ()
 
-if ( EXISTS ${LAMA_ROOT}/include )
-    include_directories( ${LAMA_ROOT}/include )
-elseif ( EXISTS ${LAMA_ROOT}/src/lama )
-    include_directories( ${LAMA_ROOT}/src )
+if ( IS_DIRECTORY ${LAMA_ROOT}lib )
+    link_directories ( ${LAMA_ROOT}lib )
+elseif ( IS_DIRECTORY ${LAMA_ROOT}build )
+    link_directories( ${LAMA_ROOT}build )
 else ()
-    message ( WARNING "Found no include subdirectories (include or src) will use include directory LAMA_ROOT ${LAMA_ROOT} " )
-    include_directories ( ${LAMA_ROOT} )
-endif ()
-
-if ( EXISTS ${LAMA_ROOT}/lib )
-    link_directories ( ${LAMA_ROOT}/lib )
-elseif ( EXISTS ${LAMA_ROOT}/build )
-    link_directories( ${LAMA_ROOT}/build )
-else ()
-    message ( WARNING "Found no link subdirectories (lib or build) will use link directory LAMA_ROOT ${LAMA_ROOT} " )
-    link_directories ( ${LAMA_ROOT} )
+    message ( FATAL_ERROR "Found no link subdirectories (lib or build) in ${LAMA_ROOT}lib or ${LAMA_ROOT}build" )
 endif ()
 
 ###
