Added new class to find out whether CUDA textures should be used; more tracing regions

--- a/src/lama/cuda/CMakeLists.txt
+++ b/src/lama/cuda/CMakeLists.txt
@@ -47,6 +47,7 @@ set ( CLASSES
         CUDALAPACK
         CUDAStreamSyncToken
         CUDATracerSyncToken
+        CUDATexture
     )
 
 set ( HEADERS
