--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -153,5 +153,6 @@ file ( COPY README DESTINATION ${CMAKE_BINARY_DIR}/test )
 
 if ( LAMA_USE_CODE_COVERAGE )
 	### Copy the cca.sh file in build directory ###
-	file ( COPY cca.sh DESTINATION ${CMAKE_BINARY_DIR}/test ) 
+	#file ( COPY cca.sh DESTINATION ${CMAKE_BINARY_DIR}/test ) 
+	configure_file( "${CMAKE_SOURCE_DIR}/test/cca.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/cca.sh" @ONLY)
 endif ( LAMA_USE_CODE_COVERAGE )
